--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -34,6 +34,10 @@
       {% endif %}
     </h2>
     
+    {% if post.authors %}
+    <p><strong>Authors:</strong> {{ post.authors }}</p>
+    {% endif %}
+
     {% if post.read_time %}
       <p class="page__meta"><i class="fa fa-clock" aria-hidden="true"></i> {% include read-time.html %}</p>
     {% endif %}
