--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -35,7 +35,7 @@
     </h2>
     
     {% if post.authors %}
-      <p><strong>Authors:</strong> {{ post.authors | raw }}</p>
+      <p>Authors: {{ post.authors | raw }}</p>
     {% endif %}
 
     {% if post.read_time %}
