--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -66,13 +66,17 @@
     <p class="archive__item-excerpt" itemprop="description"><p>{{ post.excerpt | markdownify | remove: '<p>' | remove: '</p>' }}<strong><a href="{{ base_path }}{{ post.url }}" rel="permalink"> Read more</a></strong></p></p>
     {% endif %}
     
-    {% if post.paperurl and post.slidesurl %}
+    <!-- {% if post.paperurl and post.slidesurl %}
       <p>Download Paper</a> | <a href="{{ post.slidesurl }}">Download Slides</a></p>
     {% elsif post.paperurl %}
       <p><a href=" {{ post.paperurl }} ">Download Paper</a></p>
     {% elsif post.slidesurl %}
       <p><a href="{{ post.slidesurl }}">Download Slides</a></p>
+    {% endif %} -->
+    {% if post.slidesurl %}
+      <p><a href="{{ post.slidesurl }}">Download Slides</a></p>
     {% endif %}
+
 
   </article>
 </div>
