--- a/_sass/layout/_page.scss
+++ b/_sass/layout/_page.scss
@@ -5,14 +5,16 @@
 #main {
   @include container;
   @include clearfix;
-  margin-top: 2em;
-  padding-left: 1em;
-  padding-right: 1em;
+  margin-top: 3em;
+  padding-left: 1.5em;
+  padding-right: 1.5em;
   animation: intro 0.3s both;
   animation-delay: 0.35s;
 
   @include breakpoint($x-large) {
     max-width: $x-large;
+    padding-left: 2em;
+    padding-right: 2em;
   }
 }
 
@@ -51,17 +53,25 @@
 .page__content {
 
   h2 {
-    padding-bottom: 0.5em;
+    padding-bottom: 0.75em;
+    margin-top: 2.5em;
+    margin-bottom: 1em;
     border-bottom: 1px solid var(--global-border-color);
+  }
+
+  h3 {
+    margin-top: 2em;
+    margin-bottom: 0.75em;
   }
 
   p, li, dl {
     font-size: 1em;
+    line-height: 1.7;
   }
 
   /* paragraph indents */
   p {
-    margin: 0 0 $indent-var;
+    margin: 0 0 1.5em;
 
     /* sibling indentation*/
     @if $paragraph-indent == true {
@@ -73,13 +83,17 @@
   }
 
   a {
-    text-decoration: underline;
+    text-decoration: none;
+    color: var(--global-link-color);
+    border-bottom: 1px solid transparent;
+    transition: border-color 0.2s ease-in-out;
 
     &:hover {
-      text-decoration: underline;
+      text-decoration: none;
+      border-bottom-color: var(--global-link-color);
 
       img {
-        box-shadow: 0 0 10px rgba(#000, 0.25);
+        box-shadow: 0 0 10px rgba(#000, 0.15);
       }
     }
   }
