--- a/_sass/layout/_sidebar.scss
+++ b/_sass/layout/_sidebar.scss
@@ -87,6 +87,7 @@
     display: block;
     width: auto;
     height: auto;
+    margin-bottom: 1em;
   }
 
   img {
@@ -94,8 +95,9 @@
     border-radius: 50%;
 
     @include breakpoint($large) {
-      padding: 5px;
+      padding: 3px;
       border: 1px solid var(--global-border-color);
+      transition: border-color 0.2s ease-in-out;
     }
   }
 }
@@ -119,13 +121,15 @@
   margin: 0;
 
   @include breakpoint($large) {
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 0;
+    margin-bottom: 0.5em;
   }
 }
 .sidebar .author__name {
   font-family: $sans-serif;
-  font-size: $type-size-5;
+  font-size: $type-size-4;
+  font-weight: 600;
+  letter-spacing: -0.01em;
 }
 
 .sidebar .author__desktop {
@@ -146,10 +150,13 @@
 
 .author__bio {
   margin: 0;
+  line-height: 1.6;
+  color: var(--global-text-color-light);
 
   @include breakpoint($large) {
-    margin-top: 10px;
-    margin-bottom: 20px;
+    margin-top: 0.75em;
+    margin-bottom: 1.5em;
+    font-size: $type-size-6;
   }
 }
 
@@ -245,16 +252,18 @@
 
   a {
     display: block;
-    margin-bottom: 5px;
+    margin-bottom: 6px;
     padding-right: 5px;
-    padding-top: 2px;
-    padding-bottom: 2px;
-    color: inherit;
-    font-size: $type-size-5;
+    padding-top: 3px;
+    padding-bottom: 3px;
+    color: var(--global-text-color);
+    font-size: $type-size-6;
     text-decoration: none;
+    transition: color 0.2s ease-in-out;
 
     &:hover {
-      text-decoration: underline;
+      text-decoration: none;
+      color: var(--global-link-color);
     }
   }
 }
