--- a/_sass/layout/_archive.scss
+++ b/_sass/layout/_archive.scss
@@ -10,7 +10,7 @@
   }
 
   @include breakpoint($large) {
-    @include span(10 of 12 last);
+    @include span(8 of 12);
     @include prefix(0.5 of 12);
   }
 
@@ -68,10 +68,9 @@
 
 .archive__item-image {
   margin: 1.5em 0;
-  text-align: center;
 
   .publication-image {
-    max-width: 100%;
+    width: 100%;
     height: auto;
     border-radius: $border-radius;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
@@ -79,14 +78,6 @@
 
     &:hover {
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
-    }
-
-    @include breakpoint($medium) {
-      max-width: 80%;
-    }
-
-    @include breakpoint($large) {
-      max-width: 70%;
     }
   }
 }
@@ -265,6 +256,128 @@
         margin: 0 auto;
         width: span(7 of 12);
       }
+    }
+  }
+}
+
+/* ==========================================================================
+   PUBLICATIONS NAVIGATION
+   ========================================================================== */
+
+.publications-nav {
+  display: none;
+
+  @include breakpoint($large) {
+    display: block;
+    position: fixed;
+    right: 2em;
+    top: calc(#{$masthead-height} + 3em);
+    width: 240px;
+    max-height: calc(100vh - #{$masthead-height} - 6em);
+    overflow-y: auto;
+    background: var(--global-bg-color);
+    border: 1px solid var(--global-border-color);
+    border-radius: $border-radius;
+    padding: 1.5em;
+    font-size: $type-size-6;
+    z-index: 10;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
+
+    &::-webkit-scrollbar {
+      width: 6px;
+    }
+
+    &::-webkit-scrollbar-track {
+      background: var(--global-border-color);
+      border-radius: 3px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background: var(--global-text-color-light);
+      border-radius: 3px;
+
+      &:hover {
+        background: var(--global-text-color);
+      }
+    }
+  }
+
+  @include breakpoint($x-large) {
+    right: calc((100vw - #{$x-large}) / 2 + 2em);
+  }
+
+  &__header {
+    margin-bottom: 1em;
+    padding-bottom: 0.75em;
+    border-bottom: 1px solid var(--global-border-color);
+
+    h3 {
+      margin: 0;
+      font-size: $type-size-5;
+      font-weight: 600;
+      color: var(--global-text-color);
+    }
+  }
+
+  &__list {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+  }
+
+  &__category {
+    margin-bottom: 1em;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+
+  &__category-title {
+    display: block;
+    margin-bottom: 0.5em;
+    font-weight: 600;
+    font-size: $type-size-6;
+    color: var(--global-text-color);
+    text-transform: uppercase;
+    letter-spacing: 0.05em;
+  }
+
+  &__items {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+  }
+
+  &__item {
+    margin-bottom: 0.5em;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+
+  &__link {
+    display: block;
+    padding: 0.5em 0.75em;
+    color: var(--global-text-color-light);
+    text-decoration: none;
+    border-radius: $border-radius;
+    transition: all 0.2s ease-in-out;
+    line-height: 1.4;
+
+    &:hover {
+      color: var(--global-link-color);
+      background: var(--global-border-color);
+      text-decoration: none;
+    }
+
+    &.active {
+      color: var(--global-link-color);
+      background: var(--global-border-color);
+      font-weight: 500;
+      border-left: 3px solid var(--global-link-color);
+      padding-left: calc(0.75em - 3px);
     }
   }
 }
