--- a/_sass/layout/_archive.scss
+++ b/_sass/layout/_archive.scss
@@ -270,17 +270,18 @@
   @include breakpoint($large) {
     display: block;
     position: fixed;
-    right: 2em;
+    right: 1.5em;
     top: calc(#{$masthead-height} + 3em);
     width: 240px;
     max-height: calc(100vh - #{$masthead-height} - 6em);
     overflow-y: auto;
+    overflow-x: hidden;
     background: var(--global-bg-color);
     border: 1px solid var(--global-border-color);
     border-radius: $border-radius;
     padding: 1.5em;
     font-size: $type-size-6;
-    z-index: 10;
+    z-index: 15;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
 
     &::-webkit-scrollbar {
@@ -303,7 +304,7 @@
   }
 
   @include breakpoint($x-large) {
-    right: calc((100vw - #{$x-large}) / 2 + 2em);
+    right: max(1.5em, calc((100vw - #{$x-large}) / 2 + 1.5em));
   }
 
   &__header {
