--- a/_sass/layout/_archive.scss
+++ b/_sass/layout/_archive.scss
@@ -10,7 +10,7 @@
   }
 
   @include breakpoint($large) {
-    @include span(8 of 12);
+    @include span(10 of 12 last);
     @include prefix(0.5 of 12);
   }
 
@@ -265,46 +265,12 @@
    ========================================================================== */
 
 .publications-nav {
-  display: none;
+  margin-top: 2em;
+  padding-top: 2em;
+  border-top: 1px solid var(--global-border-color);
 
   @include breakpoint($large) {
     display: block;
-    position: fixed;
-    right: 1.5em;
-    top: calc(#{$masthead-height} + 3em);
-    width: 240px;
-    max-height: calc(100vh - #{$masthead-height} - 6em);
-    overflow-y: auto;
-    overflow-x: hidden;
-    background: var(--global-bg-color);
-    border: 1px solid var(--global-border-color);
-    border-radius: $border-radius;
-    padding: 1.5em;
-    font-size: $type-size-6;
-    z-index: 15;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
-
-    &::-webkit-scrollbar {
-      width: 6px;
-    }
-
-    &::-webkit-scrollbar-track {
-      background: var(--global-border-color);
-      border-radius: 3px;
-    }
-
-    &::-webkit-scrollbar-thumb {
-      background: var(--global-text-color-light);
-      border-radius: 3px;
-
-      &:hover {
-        background: var(--global-text-color);
-      }
-    }
-  }
-
-  @include breakpoint($x-large) {
-    right: max(1.5em, calc((100vw - #{$x-large}) / 2 + 1.5em));
   }
 
   &__header {
@@ -314,9 +280,11 @@
 
     h3 {
       margin: 0;
-      font-size: $type-size-5;
+      font-size: $type-size-6;
       font-weight: 600;
       color: var(--global-text-color);
+      text-transform: uppercase;
+      letter-spacing: 0.05em;
     }
   }
 
@@ -360,25 +328,24 @@
 
   &__link {
     display: block;
-    padding: 0.5em 0.75em;
+    padding: 0.5em 0;
     color: var(--global-text-color-light);
     text-decoration: none;
-    border-radius: $border-radius;
     transition: all 0.2s ease-in-out;
-    line-height: 1.4;
+    line-height: 1.5;
+    font-size: $type-size-6;
 
     &:hover {
       color: var(--global-link-color);
-      background: var(--global-border-color);
       text-decoration: none;
+      padding-left: 0.5em;
     }
 
     &.active {
       color: var(--global-link-color);
-      background: var(--global-border-color);
       font-weight: 500;
-      border-left: 3px solid var(--global-link-color);
-      padding-left: calc(0.75em - 3px);
+      padding-left: 0.5em;
+      border-left: 2px solid var(--global-link-color);
     }
   }
 }
