--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -21,5 +21,9 @@
       {% include nav_list nav=page.sidebar.nav %}
     {% endif %}
   {% endif %}
+  
+  {% if page.permalink == "/publications/" %}
+    {% include publications-nav.html %}
+  {% endif %}
   </div>
 {% endif %}
